solve bugs in collapsable navbar

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -12,6 +12,15 @@ body {
     color: #808080;
 }
 
+/* from Bulma */
+.icon {
+    align-items: center;
+    display: inline-flex;
+    justify-content: center;
+    height: 1.5 rem;
+    width: 1.5 rem;
+}
+
 .light-background {
     padding: 100px 100px 100px 100px;
     background-attachment: fixed;
@@ -59,16 +68,8 @@ body {
 
 /* ----------------------------------- Logo and Navbar */
 
-* {
-    -webkit-tap-highlight-color: rgba(236, 12, 12, 0) !important; 
-    -webkit-focus-ring-color: rgba(255, 255, 255, 0) !important; 
-    outline: none !important;
-} /* Solved by Cyril! - https://wordpress.org/support/topic/border-around-burger-menu-button/#post-13131740 */
-
-
 .navbar-brand {
     width: 98vw;
-    position: absolute;
     top: 0;
 }
 
@@ -79,14 +80,15 @@ body {
 }
 
 .navbar-nav {
-    padding-top: 150px;
+    padding-top: 30px;
+    padding-bottom: 30px;
 }
 
 .navbar-nav li{
     border-right: 1px solid #eaeae8;
     display: inline-block;
     padding: 0 15px;
-    margin: 0;
+    margin-top: 10px;
 }
 
 .navbar-nav li:last-child {
@@ -107,6 +109,15 @@ body {
     margin-top:10px;
 }
 
+/* Get rid of the annoying black border on hamburger menu once clicked!!
+https://stackoverflow.com/questions/50668594/remove-border-color-for-navbar-toggler-hamburger-icon-in-bootstrap-using-css*/
+.navbar-toggler:focus,
+.navbar-toggler:active,
+.navbar-toggler-icon:focus {
+    outline: none;
+    box-shadow: none;
+}
+
 .brand-logo {
     width: 250px;
 }
@@ -123,35 +134,43 @@ body {
 }
 
 .nav-link:hover {
-    color: #8AA0B8;  
+    color: #808080;  
+}
+
+.dropdown-menu {
+    font-size:  1.3rem;
 }
 
 a.dropdown-item {
-    color: #808080;
+    color: #7ab1c1;
 }
 
 a.dropdown-item:hover {
-    color: #8AA0B8;
+    color: #808080;
 }
 
 .dropdown-toggle::after {
     content: none;
 }
 
-.fa-bars:hover {
-    color: #8AA0B8 !important;
+.fa-bars {
+    color: #4199ae;
 }
 
-.shopping-bag-icon {
+.fa-bars:hover {
+    color: #808080 !important;
+}
+
+/*.shopping-bag-icon {
     padding-bottom: 0;
 }
 
 .fa-shopping-bag {
     color: #4199ae;
-}
+}*/
 
 .fas:hover{
-    color: white;  
+    color: #808080;  
 }
 
 /* -------------------------------- Hero Image grid */
@@ -204,9 +223,6 @@ a.dropdown-item:hover {
         width: 375px;
     }
 
-    .navbar-nav {
-        padding-top: 200px;
-    }
 }
 
   /* Desktops and laptops */
